--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/react,webstorm
 # Edit at https://www.toptal.com/developers/gitignore?templates=react,webstorm
+build
 
 ### react ###
 .DS_*
