--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,10 +45,8 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
-        env:
-          CI: false
-
+        run: CI='' npm run build
+        
       # Runs a single command using the runners shell
       - name: Deploy
         run: |
