--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,16 +44,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
-        run: CI='' npm run build
-        
-      # Runs a single command using the runners shell
       - name: Deploy
         run: |
           git config --global user.name $user_name
           git config --global user.email $user_email
           git remote set-url origin https://${github_token}@github.com/${repository}
-          npm run deploy
+          CI='' npm run deploy
         env:
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
