--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/imagesloaded": "^4.1.2",
     "@types/jest": "^26.0.19",
     "@types/masonry-layout": "^4.2.2",
     "@types/node": "^12.19.11",
@@ -14,6 +15,9 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.9.4",
+    "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
+    "imagesloaded": "^4.1.4",
     "include-media": "^1.4.9",
     "masonry-layout": "^4.2.2",
     "node-sass": "^4.14.1",
@@ -23,9 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4",
-    "axios": "^0.21.1",
-    "gh-pages": "^3.1.0"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
