Add years, change to good functions

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/react,webstorm
 # Edit at https://www.toptal.com/developers/gitignore?templates=react,webstorm
 build
+.eslintcache
 
 ### react ###
 .DS_*
