--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "personal-website-static",
-  "version": "0.1.0",
-  "private": true,
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.6",
@@ -31,6 +40,18 @@
     "react-snapshot": "^1.3.0",
     "serve": "^11.3.2"
   },
+  "devDependencies": {
+    "@types/react-snapshot": "^1.3.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "homepage": "https://jakecover.me",
+  "name": "personal-website-static",
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && react-snapshot",
@@ -40,26 +61,5 @@
     "deploy": "gh-pages -d build",
     "serve": "serve -s build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "homepage": "https://jakecover.me",
-  "devDependencies": {
-    "@types/react-snapshot": "^1.3.0"
-  }
+  "version": "0.1.0"
 }
