--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4",
     "react-snapshot": "^1.3.0",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "typescript": "^4.1.3",
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "@types/react-snapshot": "^1.3.0"
