--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^4.3.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
+    "@ant-design/icons": "^4.7.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.2.0",
     "@types/imagesloaded": "^4.1.2",
-    "@types/jest": "^26.0.19",
-    "@types/masonry-layout": "^4.2.2",
-    "@types/node": "^12.19.11",
+    "@types/jest": "^28.1.0",
+    "@types/masonry-layout": "^4.2.5",
+    "@types/node": "^16.11.38",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
-    "antd": "^4.9.4",
-    "axios": "^0.21.1",
-    "gh-pages": "^3.1.0",
-    "imagesloaded": "^4.1.4",
-    "include-media": "^1.4.9",
+    "antd": "^4.20.7",
+    "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
+    "imagesloaded": "^5.0.0",
+    "include-media": "^1.4.10",
     "masonry-layout": "^4.2.2",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "node-sass": "^7.0.1",
+    "prettier": "^2.6.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "^5.0.1",
     "react-snapshot": "^1.3.0",
-    "serve": "^11.3.2",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "serve": "^13.0.2",
+    "typescript": "^4.7.3",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react-snapshot": "^1.3.0"
