--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,14 +44,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Deploy
+      - name: Deploy with gh-pages
         run: |
-          git config --global user.name $user_name
-          git config --global user.email $user_email
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          CI='' npm run deploy
+          npx gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
         env:
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
